tests/compile/shader_modules/mesh_shading_combinator.stderr
mesh_shading_combinator.cpp:40:18: error: no matching function for call to object of type 'MeshShadingCombinator'
   40 |         auto pipeline = MeshShadingCombinator {
      |                         ^~~~~~~~~~~~~~~~~~~~~~~
   41 |                 .device = device,
      |                 ~~~~~~~~~~~~~~~~~
   42 |                 .compiler = compiler,
      |                 ~~~~~~~~~~~~~~~~~~~~~
   43 |                 .render_state = rs,
      |                 ~~~~~~~~~~~~~~~~~~~
   44 |         } (vs, ms, fs);
      |         ~
combinators.hpp:198:7: note: candidate template ignored: constraints not satisfied [with TaskShader = shader_stage<rcgp::ShaderStage::eVertex, void, rcgp::write_only_intrinsic<rcgp::SystemValue::eClipPosition, rcgp::ShaderStage::eVertex, rcgp::vector<float, 4>>>, MeshShader = shader_stage<rcgp::ShaderStage::eMesh, rcgp::MeshletPayload<rcgp::MeshPrimitive::eTriangles, 64, 126, MeshOutputs>, rcgp::TaskPayload<rcgp::vector<float, 3>>, rcgp::WorkGroup<1>>, FragmentShader = shader_stage<rcgp::ShaderStage::eFragment, rcgp::vector<float, 4>, rcgp::vector<float, 3>>]
  198 |         auto operator()(TaskShader &task, MeshShader &mesh, FragmentShader &fragment) const {
      |              ^
combinators.hpp:195:11: note: because 'is_task_shader_v<rcgp::shader_stage<rcgp::ShaderStage::eVertex, void, rcgp::write_only_intrinsic<rcgp::SystemValue::eClipPosition, rcgp::ShaderStage::eVertex, rcgp::vector<float, 4>>>>' evaluated to false
  195 |         requires is_task_shader_v <TaskShader>
      |                  ^
combinators.hpp:199:17: error: static assertion failed due to requirement 'task_mesh_payload_compatible<rcgp::shader_stage<rcgp::ShaderStage::eTask, rcgp::TaskPayload<rcgp::vector<float, 3>>, rcgp::TaskGroup<1, 1, 1>>, rcgp::shader_stage<rcgp::ShaderStage::eMesh, rcgp::MeshletPayload<rcgp::MeshPrimitive::eTriangles, 64, 126, MeshOutputs>, rcgp::TaskPayload<rcgp::vector<float, 2>>, rcgp::WorkGroup<1, 1, 1>>>': task shader payload type does not match mesh shader payload type
  199 |                 static_assert(task_mesh_payload_compatible <TaskShader, MeshShader>,
      |                               ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
mesh_shading_combinator.cpp:64:4: note: in instantiation of function template specialization 'rcgp::MeshShadingCombinator::operator()<rcgp::shader_stage<rcgp::ShaderStage::eTask, rcgp::TaskPayload<rcgp::vector<float, 3>>, rcgp::TaskGroup<1>>, rcgp::shader_stage<rcgp::ShaderStage::eMesh, rcgp::MeshletPayload<rcgp::MeshPrimitive::eTriangles, 64, 126, MeshOutputs>, rcgp::TaskPayload<rcgp::vector<float, 2>>, rcgp::WorkGroup<1>>, rcgp::shader_stage<rcgp::ShaderStage::eFragment, rcgp::vector<float, 4>, rcgp::vector<float, 3>>>' requested here
   64 |         } (ts, ms, fs);
      |           ^
In file included from mesh_shading_combinator.cpp:1:
In file included from rcgp.hpp:4:
In file included from rcgp-meta.hpp:8:
combinators.hpp:201:17: error: static assertion failed due to requirement 'mesh_fragment_io_compatible<rcgp::shader_stage<rcgp::ShaderStage::eMesh, rcgp::MeshletPayload<rcgp::MeshPrimitive::eTriangles, 64, 126, MeshOutputs>, rcgp::TaskPayload<rcgp::vector<float, 3>>, rcgp::WorkGroup<1, 1, 1>>, rcgp::shader_stage<rcgp::ShaderStage::eFragment, rcgp::vector<float, 4>, rcgp::vector<float, 2>>>': mesh shader outputs do not match fragment shader inputs
  201 |                 static_assert(mesh_fragment_io_compatible <MeshShader, FragmentShader>,
      |                               ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
mesh_shading_combinator.cpp:84:4: note: in instantiation of function template specialization 'rcgp::MeshShadingCombinator::operator()<rcgp::shader_stage<rcgp::ShaderStage::eTask, rcgp::TaskPayload<rcgp::vector<float, 3>>, rcgp::TaskGroup<1>>, rcgp::shader_stage<rcgp::ShaderStage::eMesh, rcgp::MeshletPayload<rcgp::MeshPrimitive::eTriangles, 64, 126, MeshOutputs>, rcgp::TaskPayload<rcgp::vector<float, 3>>, rcgp::WorkGroup<1>>, rcgp::shader_stage<rcgp::ShaderStage::eFragment, rcgp::vector<float, 4>, rcgp::vector<float, 2>>>' requested here
   84 |         } (ts, ms, fs);
      |           ^
3 errors generated.
